# es-snap-mon

./: .gitignore  AGENTS.md  README.md  fix_ssl.py  pyproject.toml  run.sh  thePLAN.md
.github/workflows/: build.yml  test.yml
packaging/: launcher.py  make_icon.py
packaging/linux/: es-snap-mon.desktop
packaging/windows/: installer.iss
src/es_snap_mon/: __init__.py  __main__.py  ai_client.py  app.py  config_manager.py  es_client.py  models.py  widgets.py
src/es_snap_mon/data/: ca.pem
tests/: test_models.py
